# mft-back

./: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: deploy.yml
.sqlx/: query-325f6694fb5fc0e49055a3db68f4e152d42b78add6dec8f71ffcf37ff84b0a14.json  query-8160351a76d6fb0c993bb79159344a945482cebd1239210a51c61a9230709d88.json  query-d577224ce2251d55d0dfafd57c2c3dd63d7ca71cc35ca272bb36352e332e3b73.json
migrations/: 20251212144148_create_refresh_token_table.sql
src/: api_doc.rs  db.rs  main.rs
src/application/: mod.rs
src/application/app_state/: mod.rs
src/application/interfaces/: mod.rs  pending_change_repository.rs  pending_user_repository.rs
src/application/usecase/: mod.rs
src/application/usecase/measurements/: get_all_user_measurements.rs
src/application/usecase/user/: change_email.rs  change_password.rs  create_user.rs  delete_user.rs  find_users.rs  login_user.rs  mod.rs  restore_user.rs  send_change_code.rs  (+4 more)
src/domain/: mod.rs
src/domain/auth/: token_data.rs
src/domain/entities/: mod.rs
src/domain/errors/: bucket_error.rs  cripto_error.rs  domain_error.rs  file_error.rs  measurement_error.rs  mod.rs  permission_error.rs  smtp_error.rs
src/domain/repositories/: exercise_repository.rs
src/domain/value_objects/: body_weight_vo.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/config/: env.rs
src/infrastructure/extractors/: auth_claims.rs  current_user.rs  image_file.rs  mod.rs
src/infrastructure/providers/: mod.rs  r2_storage.rs
src/infrastructure/security/: hmac_sha_hasher.rs  mod.rs
(+57 files in other folders)
