[package]
name = "backend-v1"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "chrono",
    "macros",
] }
uuid = { version = "1", features = ["serde", "v4"] }
dotenvy = "0.15"
tower = "0.4"
jsonwebtoken = "9"
utoipa = { version = "4.2.3", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
thiserror = "1.0"
regex = "1.12.2"
argon2 = "0.5.3"
rand = "0.8"
lettre = "0.11.19"
axum-extra = { version = "0.9", features = ["multipart"] }
aws-sdk-s3 = "1.117.0"
